# advent-of-code-2022

./: .clang-format-todo  .gitignore  CMakeLists.txt  README.md
include/: common.h  day_1.h  day_10.h  day_11.h  day_12.h  day_2.h  day_3.h  day_4.h  day_5.h  day_6.h  day_7.h  day_8.h  day_9.h  days.h
include/utils/: smpl_queue.h  smpl_stack.h
src/: common.c  day_1.c  day_10.c  day_11.c  day_12.c  day_2.c  day_3.c  day_4.c  day_5.c  day_6.c  day_7.c  day_8.c  day_9.c  main.c
src/utils/: smpl_queue.c  smpl_stack.c
